--- a/translations/default/AdminShopparametersNotification.xlf
+++ b/translations/default/AdminShopparametersNotification.xlf
@@ -103,27 +103,27 @@
       <trans-unit id="837e57427bf283453398a561c9516398">
         <source>You cannot delete this shop (customer and/or order dependency).</source>
         <target>You cannot delete this shop (customer and/or order dependency).</target>
-        <note>Line: 283</note>
+        <note>Line: 296</note>
       </trans-unit>
       <trans-unit id="e3651705f1156de17be5bf1943c480b3">
         <source>Please create some sub-categories for this root category.</source>
         <target>Please create some sub-categories for this root category.</target>
-        <note>Line: 325</note>
+        <note>Line: 338</note>
       </trans-unit>
       <trans-unit id="cf52c411b5659457074fd9962435307f">
         <source>You need to select at least the root category.</source>
         <target>You need to select at least the root category.</target>
-        <note>Line: 333</note>
+        <note>Line: 346</note>
       </trans-unit>
       <trans-unit id="18f086b62387b20309c709bbf9fe4fdb">
         <source>Warning: You won't be able to change the group of this shop if this shop belongs to a group with one of these options activated: Share Customers, Share Quantities or Share Orders.</source>
         <target>Warning: You won't be able to change the group of this shop if this shop belongs to a group with one of these options activated: Share Customers, Share Quantities or Share Orders.</target>
-        <note>Line: 426</note>
+        <note>Line: 440</note>
       </trans-unit>
       <trans-unit id="1ff40978236e0d196983386376b0a5e3">
         <source>You can only move your shop to a shop group with all "share" options disabled -- or to a shop group with no customers/orders.</source>
         <target>You can only move your shop to a shop group with all "share" options disabled -- or to a shop group with no customers/orders.</target>
-        <note>Line: 428</note>
+        <note>Line: 442</note>
       </trans-unit>
     </body>
   </file>
@@ -160,17 +160,17 @@
       <trans-unit id="b8a27e47e64caa3e36c8894c3745357b">
         <source>Before being able to use this tool, you need to:</source>
         <target>Before being able to use this tool, you need to:</target>
-        <note>Line: 112</note>
+        <note>Line: 118</note>
       </trans-unit>
       <trans-unit id="d7faa8eb2f73f2c764e387d3d7c57556">
         <source>Create a blank .htaccess in your root directory.</source>
         <target>Create a blank .htaccess in your root directory.</target>
-        <note>Line: 120</note>
+        <note>Line: 126</note>
       </trans-unit>
       <trans-unit id="5dab5160dfb25b3a4d6c51416dac5c87">
         <source>Give it write permissions (CHMOD 666 on Unix system).</source>
         <target>Give it write permissions (CHMOD 666 on Unix system).</target>
-        <note>Line: 128</note>
+        <note>Line: 134</note>
       </trans-unit>
     </body>
   </file>
@@ -201,12 +201,12 @@
       </trans-unit>
     </body>
   </file>
-  <file original="src/PrestaShopBundle/Form/Admin/Configure/ShopParameters/OrderPreferences/OrderPreferencesGeneralFormDataProvider.php" source-language="en-US" target-language="en" datatype="plaintext">
+  <file original="src/PrestaShopBundle/Form/Admin/Configure/ShopParameters/OrderPreferences/OrderPreferencesFormDataProvider.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="85a1ca0031f114f8409d15c6790856f5">
         <source>Assign a valid page if you want it to be read.</source>
         <target>Assign a valid page if you want it to be read.</target>
-        <note>Line: 118</note>
+        <note>Line: 142</note>
       </trans-unit>
     </body>
   </file>
@@ -305,9 +305,9 @@
         <target>All keywords must be separated</target>
         <note>Line: 66</note>
       </trans-unit>
-      <trans-unit id="0941202f74afa2e0eaad772eaec54d2a">
-        <source>As long as a keyword has an associated value, you can use the syntax {prepend:keyword:append} to add text before and after it</source>
-        <target>As long as a keyword has an associated value, you can use the syntax {prepend:keyword:append} to add text before and after it</target>
+      <trans-unit id="72648be8a3ff61acd92f41a9b0e924d5">
+        <source>As long as a keyword has an associated value, you can use the syntax {prepend:keyword:append} to add text before and after it.</source>
+        <target>As long as a keyword has an associated value, you can use the syntax {prepend:keyword:append} to add text before and after it.</target>
         <note>Line: 69</note>
       </trans-unit>
     </body>
@@ -317,8 +317,7 @@
       <trans-unit id="843afaeb1d84245d7cf7d0877a7258dd">
         <source>You can only display the page list in a shop context.</source>
         <target>You can only display the page list in a shop context.</target>
-        <note>Line: 34
-Comment: Stable feature flags form</note>
+        <note>Line: 34</note>
       </trans-unit>
     </body>
   </file>
