--- a/translations/default/AdminInternationalFeature.xlf
+++ b/translations/default/AdminInternationalFeature.xlf
@@ -67,8 +67,27 @@
       </trans-unit>
     </body>
   </file>
+  <file original="admin-dev/themes/default/template/controllers/translations/helpers/view/translation_errors.tpl" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="f05b91496296629228c94a6b4b0a335f">
+        <source>Expressions to translate:</source>
+        <target>Expressions to translate:</target>
+        <note>Line: 51</note>
+      </trans-unit>
+      <trans-unit id="57aca76c1e8e4e4063437a931c74a0ee">
+        <source>Total missing expressions:</source>
+        <target>Total missing expressions:</target>
+        <note>Line: 52</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="admin-dev/themes/default/template/controllers/translations/helpers/view/translation_form.tpl" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
+      <trans-unit id="1476dfb963d54c697399a79fafa90151">
+        <source>expressions</source>
+        <target>expressions</target>
+        <note>Line: 110</note>
+      </trans-unit>
       <trans-unit id="ea21841da70e6405af19fabc4ff8bdd9">
         <source>missing</source>
         <target>missing</target>
@@ -97,21 +116,6 @@
         <target>Modify translations</target>
         <note>Line: 189</note>
       </trans-unit>
-      <trans-unit id="f05b91496296629228c94a6b4b0a335f">
-        <source>Expressions to translate:</source>
-        <target>Expressions to translate:</target>
-        <note>Line: 56</note>
-      </trans-unit>
-      <trans-unit id="57aca76c1e8e4e4063437a931c74a0ee">
-        <source>Total missing expressions:</source>
-        <target>Total missing expressions:</target>
-        <note>Line: 57</note>
-      </trans-unit>
-      <trans-unit id="1476dfb963d54c697399a79fafa90151">
-        <source>expressions</source>
-        <target>expressions</target>
-        <note>Line: 116</note>
-      </trans-unit>
       <trans-unit id="a9e4402481bd9b8e36752bf731f67eb6">
         <source>Theme:</source>
         <target>Theme:</target>
@@ -126,6 +130,21 @@
   </file>
   <file original="controllers/admin/AdminCountriesController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
+      <trans-unit id="ad68f9bafd9bf2dcf3865dac55662fd5">
+        <source>ISO code</source>
+        <target>ISO code</target>
+        <note>Line: 201</note>
+      </trans-unit>
+      <trans-unit id="d8ec51bf63378409b1d40cc45c80f926">
+        <source>Call prefix</source>
+        <target>Call prefix</target>
+        <note>Line: 215</note>
+      </trans-unit>
+      <trans-unit id="94d7422ba3c5b0f2a35f50b048e51c6d">
+        <source>Default currency</source>
+        <target>Default currency</target>
+        <note>Line: 224</note>
+      </trans-unit>
       <trans-unit id="f52c1ff75f69fa46ae947f0a3f653641">
         <source>Country options</source>
         <target>Country options</target>
@@ -183,8 +202,27 @@
       </trans-unit>
     </body>
   </file>
+  <file original="controllers/admin/AdminStatesController.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="71777469a202cba33a8985f7d5bf1d97">
+        <source>Add new state</source>
+        <target>Add new state</target>
+        <note>Line: 115</note>
+      </trans-unit>
+      <trans-unit id="b8464cdd84b5f068ad72bf5c4f32163d">
+        <source>States</source>
+        <target>States</target>
+        <note>Line: 145</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="controllers/admin/AdminTaxRulesGroupController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
+      <trans-unit id="e7c7216c46ae0e04e2012a2137803cca">
+        <source>Add new tax rules group</source>
+        <target>Add new tax rules group</target>
+        <note>Line: 81</note>
+      </trans-unit>
       <trans-unit id="7ec515dc1920404871d8180791d589f2">
         <source>Add a new tax rule</source>
         <target>Add a new tax rule</target>
@@ -214,6 +252,41 @@
   </file>
   <file original="controllers/admin/AdminTranslationsController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
+      <trans-unit id="fabfbbc841761a5621aea32aff4aa151">
+        <source>Back office translations</source>
+        <target>Back office translations</target>
+        <note>Line: 1335</note>
+      </trans-unit>
+      <trans-unit id="2ffdb9f581f55fb1ae293ec48b151aad">
+        <source>Front office Translations</source>
+        <target>Front office Translations</target>
+        <note>Line: 1470</note>
+      </trans-unit>
+      <trans-unit id="3d966df0f234e9180aac80223c2a7e85">
+        <source>Installed modules translations</source>
+        <target>Installed modules translations</target>
+        <note>Line: 1351</note>
+      </trans-unit>
+      <trans-unit id="6df6a1378a5ddcdef978aadf494cef5d">
+        <source>Email translations</source>
+        <target>Email translations</target>
+        <note>Line: 1359</note>
+      </trans-unit>
+      <trans-unit id="5d1eb86e15320f5677c9502df9c97dd3">
+        <source>Other translations</source>
+        <target>Other translations</target>
+        <note>Line: 1367</note>
+      </trans-unit>
+      <trans-unit id="8ed78ce61d50323c845e812aaccf247a">
+        <source>Enabled Languages</source>
+        <target>Enabled Languages</target>
+        <note>Line: 1445</note>
+      </trans-unit>
+      <trans-unit id="c1aaec25c6e16ac8f28fdc652f1986ec">
+        <source>Main Country</source>
+        <target>Main Country</target>
+        <note>Line: 1457</note>
+      </trans-unit>
       <trans-unit id="6b13904f9eecabe20d88f942e84e1cb8">
         <source>%1$s (Language: %2$s, Theme: %3$s)</source>
         <target>%1$s (Language: %2$s, Theme: %3$s)</target>
@@ -227,64 +300,37 @@
       <trans-unit id="445518ee6de9f01f5203fa05e5b83236">
         <source>Themes translations</source>
         <target>Themes translations</target>
-        <note>Line: 1347</note>
+        <note>Line: 1343</note>
       </trans-unit>
       <trans-unit id="6e4fd86b4ea240672daa3c2fe1118fe0">
         <source>Expand all fieldsets</source>
         <target>Expand all fieldsets</target>
-        <note>Line: 1768</note>
+        <note>Line: 1764</note>
       </trans-unit>
       <trans-unit id="e1686cbdbfefdc838c58469866922b6c">
         <source>Close all fieldsets</source>
         <target>Close all fieldsets</target>
-        <note>Line: 1771</note>
+        <note>Line: 1767</note>
       </trans-unit>
       <trans-unit id="80ab38b942fb2da88ca496f8bbe237f7">
         <source>Email subject</source>
         <target>Email subject</target>
-        <note>Line: 2528</note>
+        <note>Line: 2524</note>
       </trans-unit>
       <trans-unit id="673a349a39148b988e9aabf651d31a96">
         <source>View HTML version</source>
         <target>View HTML version</target>
-        <note>Line: 2551</note>
+        <note>Line: 2547</note>
       </trans-unit>
       <trans-unit id="b040fe53badd6b3784735f3d102df0bd">
         <source>Edit HTML version</source>
         <target>Edit HTML version</target>
-        <note>Line: 2552</note>
+        <note>Line: 2548</note>
       </trans-unit>
       <trans-unit id="5f986174fa9cf6c0ddd927e11b68254a">
         <source>View/Edit TXT version</source>
         <target>View/Edit TXT version</target>
-        <note>Line: 2553</note>
-      </trans-unit>
-    </body>
-  </file>
-  <file original="src/Adapter/Kpi/EnabledLanguagesKpi.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="8ed78ce61d50323c845e812aaccf247a">
-        <source>Enabled Languages</source>
-        <target>Enabled Languages</target>
-        <note>Line: 90</note>
-      </trans-unit>
-    </body>
-  </file>
-  <file original="src/Adapter/Kpi/MainCountryKpi.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="c1aaec25c6e16ac8f28fdc652f1986ec">
-        <source>Main Country</source>
-        <target>Main Country</target>
-        <note>Line: 81</note>
-      </trans-unit>
-    </body>
-  </file>
-  <file original="src/Adapter/Kpi/TranslationsKpi.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="2ffdb9f581f55fb1ae293ec48b151aad">
-        <source>Front office Translations</source>
-        <target>Front office Translations</target>
-        <note>Line: 81</note>
+        <note>Line: 2549</note>
       </trans-unit>
     </body>
   </file>
@@ -322,26 +368,6 @@
   </file>
   <file original="src/Core/Form/ChoiceProvider/TranslationTypeChoiceProvider.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="fabfbbc841761a5621aea32aff4aa151">
-        <source>Back office translations</source>
-        <target>Back office translations</target>
-        <note>Line: 57</note>
-      </trans-unit>
-      <trans-unit id="3d966df0f234e9180aac80223c2a7e85">
-        <source>Installed modules translations</source>
-        <target>Installed modules translations</target>
-        <note>Line: 59</note>
-      </trans-unit>
-      <trans-unit id="6df6a1378a5ddcdef978aadf494cef5d">
-        <source>Email translations</source>
-        <target>Email translations</target>
-        <note>Line: 60</note>
-      </trans-unit>
-      <trans-unit id="5d1eb86e15320f5677c9502df9c97dd3">
-        <source>Other translations</source>
-        <target>Other translations</target>
-        <note>Line: 61</note>
-      </trans-unit>
       <trans-unit id="b28aaa7d2f8c959ac0a42ec3859a39b4">
         <source>Back office</source>
         <target>Back office</target>
@@ -364,60 +390,8 @@
       </trans-unit>
     </body>
   </file>
-  <file original="src/Core/Grid/Definition/Factory/CountryGridDefinitionFactory.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="ad68f9bafd9bf2dcf3865dac55662fd5">
-        <source>ISO code</source>
-        <target>ISO code</target>
-        <note>Line: 102</note>
-      </trans-unit>
-      <trans-unit id="d8ec51bf63378409b1d40cc45c80f926">
-        <source>Call prefix</source>
-        <target>Call prefix</target>
-        <note>Line: 109</note>
-      </trans-unit>
-    </body>
-  </file>
-  <file original="src/Core/Grid/Definition/Factory/CurrencyGridDefinitionFactory.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="02c86eb2792f3262c21d030a87e19793">
-        <source>Symbol</source>
-        <target>Symbol</target>
-        <note>Line: 203</note>
-      </trans-unit>
-    </body>
-  </file>
-  <file original="src/Core/Grid/Definition/Factory/LanguageGridDefinitionFactory.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="e59a41e120686e63cbb743f003bea4e6">
-        <source>Language code</source>
-        <target>Language code</target>
-        <note>Line: 121</note>
-      </trans-unit>
-      <trans-unit id="534fd46732986cba0efeda8701592427">
-        <source>Date format</source>
-        <target>Date format</target>
-        <note>Line: 128</note>
-      </trans-unit>
-      <trans-unit id="c11566e30920ed4786e534e5332d5b87">
-        <source>Date format (full)</source>
-        <target>Date format (full)</target>
-        <note>Line: 135</note>
-      </trans-unit>
-      <trans-unit id="c5836008c1649301e29351a55db8f65c">
-        <source>Flag</source>
-        <target>Flag</target>
-        <note>Line: 97</note>
-      </trans-unit>
-    </body>
-  </file>
   <file original="src/Core/Grid/Definition/Factory/TaxGridDefinitionFactory.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="dcb66ff6e4a2517ade22183779939c9d">
-        <source>Rate</source>
-        <target>Rate</target>
-        <note>Line: 100</note>
-      </trans-unit>
       <trans-unit id="7087cbed62cddb06bd7506c46269f0b5">
         <source>Search rate</source>
         <target>Search rate</target>
@@ -427,38 +401,15 @@
   </file>
   <file original="src/PrestaShopBundle/Controller/Admin/Improve/International/CurrencyController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="586e27d3575f00e51ad43b66eb34e49f">
-        <source>Currency name</source>
-        <target>Currency name</target>
-        <note>Line: 574</note>
-      </trans-unit>
       <trans-unit id="3be3001725eece62c9121b4d82c00d53">
         <source>Cannot find reference data for currency %isoCode%</source>
         <target>Cannot find reference data for currency %isoCode%</target>
-        <note>Line: 301</note>
+        <note>Line: 302</note>
       </trans-unit>
       <trans-unit id="462fdc88328b3c9d31c63fa01b4f00b1">
         <source>Numeric ISO code</source>
         <target>Numeric ISO code</target>
-        <note>Line: 560</note>
-      </trans-unit>
-    </body>
-  </file>
-  <file original="src/PrestaShopBundle/Controller/Admin/Improve/International/StateController.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="71777469a202cba33a8985f7d5bf1d97">
-        <source>Add new state</source>
-        <target>Add new state</target>
-        <note>Line: 302</note>
-      </trans-unit>
-    </body>
-  </file>
-  <file original="src/PrestaShopBundle/Controller/Admin/Improve/International/TaxRulesGroupController.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="e7c7216c46ae0e04e2012a2137803cca">
-        <source>Add new tax rules group</source>
-        <target>Add new tax rules group</target>
-        <note>Line: 288</note>
+        <note>Line: 561</note>
       </trans-unit>
     </body>
   </file>
@@ -471,8 +422,27 @@
       </trans-unit>
     </body>
   </file>
+  <file original="src/PrestaShopBundle/Form/Admin/Improve/Design/MailTheme/GenerateMailsType.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="5aca31cb4d1fbb543b716cbaaf35c65f">
+        <source>Core (no theme selected)</source>
+        <target>Core (no theme selected)</target>
+        <note>Line: 68</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="src/PrestaShopBundle/Form/Admin/Improve/International/Currencies/CurrencyType.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
+      <trans-unit id="02c86eb2792f3262c21d030a87e19793">
+        <source>Symbol</source>
+        <target>Symbol</target>
+        <note>Line: 148</note>
+      </trans-unit>
+      <trans-unit id="586e27d3575f00e51ad43b66eb34e49f">
+        <source>Currency name</source>
+        <target>Currency name</target>
+        <note>Line: 128</note>
+      </trans-unit>
       <trans-unit id="7d9ccccf4e5cc7d7949f26f0a2f5f341">
         <source>Select a currency</source>
         <target>Select a currency</target>
@@ -535,6 +505,26 @@
   </file>
   <file original="src/PrestaShopBundle/Form/Admin/Improve/International/Language/LanguageType.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
+      <trans-unit id="c5836008c1649301e29351a55db8f65c">
+        <source>Flag</source>
+        <target>Flag</target>
+        <note>Line: 150</note>
+      </trans-unit>
+      <trans-unit id="e59a41e120686e63cbb743f003bea4e6">
+        <source>Language code</source>
+        <target>Language code</target>
+        <note>Line: 106</note>
+      </trans-unit>
+      <trans-unit id="534fd46732986cba0efeda8701592427">
+        <source>Date format</source>
+        <target>Date format</target>
+        <note>Line: 118</note>
+      </trans-unit>
+      <trans-unit id="c11566e30920ed4786e534e5332d5b87">
+        <source>Date format (full)</source>
+        <target>Date format (full)</target>
+        <note>Line: 134</note>
+      </trans-unit>
       <trans-unit id="a0978fb69022447c12c0db348ad4f00c">
         <source>"No-picture" image</source>
         <target>"No-picture" image</target>
@@ -563,11 +553,6 @@
   </file>
   <file original="src/PrestaShopBundle/Form/Admin/Improve/International/Localization/ImportLocalizationPackType.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="b8464cdd84b5f068ad72bf5c4f32163d">
-        <source>States</source>
-        <target>States</target>
-        <note>Line: 118</note>
-      </trans-unit>
       <trans-unit id="75f9936f4fef50cf05561217a24f058c">
         <source>Localization pack you want to import</source>
         <target>Localization pack you want to import</target>
@@ -621,11 +606,6 @@
   </file>
   <file original="src/PrestaShopBundle/Form/Admin/Improve/International/Localization/LocalizationConfigurationType.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="94d7422ba3c5b0f2a35f50b048e51c6d">
-        <source>Default currency</source>
-        <target>Default currency</target>
-        <note>Line: 145</note>
-      </trans-unit>
       <trans-unit id="c96a77fb323a41898c3b6941a58dc741">
         <source>Default language</source>
         <target>Default language</target>
@@ -679,6 +659,15 @@
         <source>Ecotax</source>
         <target>Ecotax</target>
         <note>Line: 140</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="src/PrestaShopBundle/Form/Admin/Improve/International/Tax/TaxType.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="dcb66ff6e4a2517ade22183779939c9d">
+        <source>Rate</source>
+        <target>Rate</target>
+        <note>Line: 101</note>
       </trans-unit>
     </body>
   </file>
@@ -741,11 +730,6 @@
   </file>
   <file original="src/PrestaShopBundle/Form/Admin/Improve/International/Translations/ModifyTranslationsType.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="5aca31cb4d1fbb543b716cbaaf35c65f">
-        <source>Core (no theme selected)</source>
-        <target>Core (no theme selected)</target>
-        <note>Line: 90</note>
-      </trans-unit>
       <trans-unit id="021257190c6e64120915e008a94a06f8">
         <source>Type of translation</source>
         <target>Type of translation</target>
@@ -859,7 +843,8 @@
       <trans-unit id="076b68505282c6c0654708db343d6673">
         <source>Add new currency</source>
         <target>Add new currency</target>
-        <note>Line: 31</note>
+        <note>Line: 31
+Comment: Stable feature flags form</note>
       </trans-unit>
     </body>
   </file>
