--- a/translations/default/AdminShippingFeature.xlf
+++ b/translations/default/AdminShippingFeature.xlf
@@ -111,7 +111,7 @@
       <trans-unit id="29aa46cc3d2677c7e0f216910df600ff">
         <source>Free shipping</source>
         <target>Free shipping</target>
-        <note>Line: 212</note>
+        <note>Line: 218</note>
       </trans-unit>
     </body>
   </file>
@@ -131,6 +131,31 @@
   </file>
   <file original="controllers/admin/AdminCarrierWizardController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
+      <trans-unit id="dde695268ea519ababd83f0ca3d274fc">
+        <source>Transit time</source>
+        <target>Transit time</target>
+        <note>Line: 214</note>
+      </trans-unit>
+      <trans-unit id="c8b462f779749d2e27abed2e9501b2bd">
+        <source>Speed grade</source>
+        <target>Speed grade</target>
+        <note>Line: 223</note>
+      </trans-unit>
+      <trans-unit id="780c462e85ba4399a5d42e88f69a15ca">
+        <source>Billing</source>
+        <target>Billing</target>
+        <note>Line: 319</note>
+      </trans-unit>
+      <trans-unit id="082ebbb29b5ba59c293a00a55581679b">
+        <source>Out-of-range behavior</source>
+        <target>Out-of-range behavior</target>
+        <note>Line: 353</note>
+      </trans-unit>
+      <trans-unit id="4f890cf6a72112cad95093baecf39831">
+        <source>Disable carrier</source>
+        <target>Disable carrier</target>
+        <note>Line: 363</note>
+      </trans-unit>
       <trans-unit id="de62775a71fc2bf7a13d7530ae24a7ed">
         <source>General settings</source>
         <target>General settings</target>
@@ -205,30 +230,10 @@
   </file>
   <file original="controllers/admin/AdminCarriersController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="dde695268ea519ababd83f0ca3d274fc">
-        <source>Transit time</source>
-        <target>Transit time</target>
-        <note>Line: 184</note>
-      </trans-unit>
-      <trans-unit id="c8b462f779749d2e27abed2e9501b2bd">
-        <source>Speed grade</source>
-        <target>Speed grade</target>
-        <note>Line: 193</note>
-      </trans-unit>
-      <trans-unit id="780c462e85ba4399a5d42e88f69a15ca">
-        <source>Billing</source>
-        <target>Billing</target>
-        <note>Line: 300</note>
-      </trans-unit>
-      <trans-unit id="082ebbb29b5ba59c293a00a55581679b">
-        <source>Out-of-range behavior</source>
-        <target>Out-of-range behavior</target>
-        <note>Line: 325</note>
-      </trans-unit>
-      <trans-unit id="4f890cf6a72112cad95093baecf39831">
-        <source>Disable carrier</source>
-        <target>Disable carrier</target>
-        <note>Line: 335</note>
+      <trans-unit id="8f497c1a3d15af9e0c215019f26b887d">
+        <source>Delay</source>
+        <target>Delay</target>
+        <note>Line: 85</note>
       </trans-unit>
       <trans-unit id="4e140ba723a03baa6948340bf90e2ef6">
         <source>Name:</source>
@@ -287,15 +292,6 @@
       </trans-unit>
     </body>
   </file>
-  <file original="src/Core/Grid/Definition/Factory/CarrierGridDefinitionFactory.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="8f497c1a3d15af9e0c215019f26b887d">
-        <source>Delay</source>
-        <target>Delay</target>
-        <note>Line: 112</note>
-      </trans-unit>
-    </body>
-  </file>
   <file original="src/PrestaShopBundle/Form/Admin/Improve/Shipping/Preferences/CarrierOptionsType.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="bff13ed1cd5b83b03f024f1eb6524337">
@@ -351,6 +347,15 @@
       </trans-unit>
     </body>
   </file>
+  <file original="src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Order/Blocks/View/add_product_row.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="914419aa32f04011357d3b604a86d7eb">
+        <source>Carrier</source>
+        <target>Carrier</target>
+        <note>Line: 87</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Order/Blocks/View/details.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="1d6af794b2599c1407a83029a09d1ecf">
@@ -362,11 +367,6 @@
   </file>
   <file original="src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Order/Blocks/View/shipping.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="914419aa32f04011357d3b604a86d7eb">
-        <source>Carrier</source>
-        <target>Carrier</target>
-        <note>Line: 44</note>
-      </trans-unit>
       <trans-unit id="552a0d8c17d95d5dbdc0c28217024f5a">
         <source>Shipping cost</source>
         <target>Shipping cost</target>
