--- a/translations/default/ShopFormsHelp.xlf
+++ b/translations/default/ShopFormsHelp.xlf
@@ -16,11 +16,6 @@
   </file>
   <file original="controllers/front/GuestTrackingController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="4e46ead161638465b5f8cc4351e559a3">
-        <source>Enter a password to transform your guest account into a customer account.</source>
-        <target>Enter a password to transform your guest account into a customer account.</target>
-        <note>Line: 91</note>
-      </trans-unit>
       <trans-unit id="fc958b60fae3edad351928fd9968f129">
         <source>Your password length must be between %d and %d</source>
         <target>Your password length must be between %d and %d</target>
@@ -30,6 +25,15 @@
         <source>Customer password is too weak</source>
         <target>Customer password is too weak</target>
         <note>Line: 103</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="controllers/front/OrderConfirmationController.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="4e46ead161638465b5f8cc4351e559a3">
+        <source>Enter a password to transform your guest account into a customer account.</source>
+        <target>Enter a password to transform your guest account into a customer account.</target>
+        <note>Line: 130</note>
       </trans-unit>
     </body>
   </file>
